<resources>
    <string name="app_name">Контроль задолженностей</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Open">Открыть</string>
    <string name="Close">Закрыть</string>
    <string name="FIO_user">ФИО пользователя</string>
    <string name="email_user">Email пользователя</string>
    <string name="group_user">Группа пользователя</string>
    <string name="role_user">Роль пользователя</string>
    <string name="date_of_creation">Дата создания аккаунта</string>
</resources>